--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-lazyload": "^3.2.3",
     "framer-motion": "^11.0.6",
     "lucide-react": "^0.376.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
