--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-lazyload": "^3.2.3",
+    "@vercel/analytics": "^1.4.1",
     "framer-motion": "^11.0.6",
     "lucide-react": "^0.376.0",
     "prop-types": "^15.8.1",
